--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
     "react-dotenv": "^0.1.3",
+    "react-edit-text": "^4.3.0",
     "react-google-login": "^5.2.2",
     "react-responsive-modal": "^6.2.0",
     "react-router": "^6.2.1",
